--- a/interfaces/menu.ui
+++ b/interfaces/menu.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>911</width>
-    <height>722</height>
+    <height>726</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -977,7 +977,7 @@ QFrame{
                          <number>237</number>
                         </attribute>
                         <attribute name="horizontalHeaderStretchLastSection">
-                         <bool>false</bool>
+                         <bool>true</bool>
                         </attribute>
                         <column>
                          <property name="text">
