--- a/interfaces/loggin.ui
+++ b/interfaces/loggin.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>742</width>
-    <height>576</height>
+    <width>728</width>
+    <height>619</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -49,6 +55,12 @@ background-color:black;
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <widget class="QFrame" name="frame_contenido">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="styleSheet">
           <string notr="true">QFrame{
 background-color:gray;
@@ -60,45 +72,39 @@ background-color:gray;
          <property name="frameShadow">
           <enum>QFrame::Raised</enum>
          </property>
-         <widget class="QFrame" name="frame">
-          <property name="geometry">
-           <rect>
-            <x>20</x>
-            <y>10</y>
-            <width>691</width>
-            <height>541</height>
-           </rect>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">background-color:rgba(0,0,0,100);
+         <layout class="QVBoxLayout" name="verticalLayout_2">
+          <item>
+           <widget class="QFrame" name="frame">
+            <property name="styleSheet">
+             <string notr="true">background-color:rgba(0,0,0,100);
 border-radius:25px;</string>
-          </property>
-          <property name="frameShape">
-           <enum>QFrame::StyledPanel</enum>
-          </property>
-          <property name="frameShadow">
-           <enum>QFrame::Raised</enum>
-          </property>
-          <widget class="QPushButton" name="btn_login">
-           <property name="geometry">
-            <rect>
-             <x>160</x>
-             <y>380</y>
-             <width>161</width>
-             <height>41</height>
-            </rect>
-           </property>
-           <property name="font">
-            <font>
-             <family>Hack Nerd Font</family>
-             <pointsize>12</pointsize>
-             <weight>50</weight>
-             <italic>false</italic>
-             <bold>false</bold>
-            </font>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">QPushButton{
+            </property>
+            <property name="frameShape">
+             <enum>QFrame::StyledPanel</enum>
+            </property>
+            <property name="frameShadow">
+             <enum>QFrame::Raised</enum>
+            </property>
+            <widget class="QPushButton" name="btn_login">
+             <property name="geometry">
+              <rect>
+               <x>160</x>
+               <y>380</y>
+               <width>161</width>
+               <height>41</height>
+              </rect>
+             </property>
+             <property name="font">
+              <font>
+               <family>Hack Nerd Font</family>
+               <pointsize>12</pointsize>
+               <weight>50</weight>
+               <italic>false</italic>
+               <bold>false</bold>
+              </font>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">QPushButton{
 	font: 12pt &quot;Hack Nerd Font&quot;;
 color:rgba(255,255,255,210);
 
@@ -114,32 +120,32 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0.505682 , x2:1 , y2:0.47
 }
 
 </string>
-           </property>
-           <property name="text">
-            <string>Ingresar</string>
-           </property>
-           <property name="icon">
-            <iconset>
-             <normaloff>../../ingresar.png</normaloff>../../ingresar.png</iconset>
-           </property>
-           <property name="iconSize">
-            <size>
-             <width>19</width>
-             <height>18</height>
-            </size>
-           </property>
-          </widget>
-          <widget class="QPushButton" name="btn_adduser">
-           <property name="geometry">
-            <rect>
-             <x>390</x>
-             <y>380</y>
-             <width>161</width>
-             <height>41</height>
-            </rect>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">QPushButton{
+             </property>
+             <property name="text">
+              <string>Ingresar</string>
+             </property>
+             <property name="icon">
+              <iconset>
+               <normaloff>../../ingresar.png</normaloff>../../ingresar.png</iconset>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>19</width>
+               <height>18</height>
+              </size>
+             </property>
+            </widget>
+            <widget class="QPushButton" name="btn_adduser">
+             <property name="geometry">
+              <rect>
+               <x>390</x>
+               <y>380</y>
+               <width>161</width>
+               <height>41</height>
+              </rect>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">QPushButton{
 	font: 12pt &quot;Hack Nerd Font&quot;;
 color:rgba(255,255,255,210);
 
@@ -155,22 +161,22 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0.505682 , x2:1 , y2:0.47
 }
 
 </string>
-           </property>
-           <property name="text">
-            <string>Registrar</string>
-           </property>
-          </widget>
-          <widget class="QPushButton" name="bt_salir">
-           <property name="geometry">
-            <rect>
-             <x>610</x>
-             <y>30</y>
-             <width>51</width>
-             <height>51</height>
-            </rect>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">QPushButton{
+             </property>
+             <property name="text">
+              <string>Registrar</string>
+             </property>
+            </widget>
+            <widget class="QPushButton" name="bt_salir">
+             <property name="geometry">
+              <rect>
+               <x>610</x>
+               <y>30</y>
+               <width>51</width>
+               <height>51</height>
+              </rect>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">QPushButton{
 border-radius:25px;
 }
 
@@ -180,75 +186,78 @@ background-color:rgb(145, 200, 228);
 
 }
 </string>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset>
-             <normaloff>ELEMENTOS GRAFICOS/exit-fill.png</normaloff>ELEMENTOS GRAFICOS/exit-fill.png</iconset>
-           </property>
-           <property name="iconSize">
-            <size>
-             <width>38</width>
-             <height>38</height>
-            </size>
-           </property>
-          </widget>
-          <widget class="QLabel" name="label">
-           <property name="geometry">
-            <rect>
-             <x>20</x>
-             <y>20</y>
-             <width>651</width>
-             <height>501</height>
-            </rect>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">border-radius:10px;</string>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="pixmap">
-            <pixmap>ELEMENTOS GRAFICOS/login-wallpaper.jpg</pixmap>
-           </property>
-           <property name="scaledContents">
-            <bool>true</bool>
-           </property>
-          </widget>
-          <widget class="QLabel" name="label_3">
-           <property name="geometry">
-            <rect>
-             <x>290</x>
-             <y>110</y>
-             <width>141</width>
-             <height>40</height>
-            </rect>
-           </property>
-           <property name="font">
-            <font>
-             <pointsize>20</pointsize>
-            </font>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">color:rgba(255,255,255,210);</string>
-           </property>
-           <property name="text">
-            <string>Ingreso</string>
-           </property>
-          </widget>
-          <widget class="QLineEdit" name="txt_username">
-           <property name="geometry">
-            <rect>
-             <x>190</x>
-             <y>180</y>
-             <width>331</width>
-             <height>41</height>
-            </rect>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">background-color:rgba(0,0,0,0); 
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="icon">
+              <iconset>
+               <normaloff>ELEMENTOS GRAFICOS/exit-fill.png</normaloff>ELEMENTOS GRAFICOS/exit-fill.png</iconset>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>38</width>
+               <height>38</height>
+              </size>
+             </property>
+            </widget>
+            <widget class="QLabel" name="label">
+             <property name="geometry">
+              <rect>
+               <x>20</x>
+               <y>20</y>
+               <width>651</width>
+               <height>501</height>
+              </rect>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">border-radius:10px;</string>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="pixmap">
+              <pixmap>ELEMENTOS GRAFICOS/login-wallpaper.jpg</pixmap>
+             </property>
+             <property name="scaledContents">
+              <bool>true</bool>
+             </property>
+            </widget>
+            <widget class="QLabel" name="label_3">
+             <property name="geometry">
+              <rect>
+               <x>290</x>
+               <y>110</y>
+               <width>141</width>
+               <height>40</height>
+              </rect>
+             </property>
+             <property name="font">
+              <font>
+               <pointsize>20</pointsize>
+              </font>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">color:rgba(255,255,255,210);</string>
+             </property>
+             <property name="text">
+              <string>Ingreso</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+            <widget class="QLineEdit" name="txt_username">
+             <property name="geometry">
+              <rect>
+               <x>190</x>
+               <y>180</y>
+               <width>331</width>
+               <height>41</height>
+              </rect>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">background-color:rgba(0,0,0,0); 
 border:none;
 border-bottom:2px solid rgba(105,118,132,255);
 color:rgba(255,255,255,230);
@@ -256,25 +265,25 @@ padding-bottom:7px;
 border-left:2px solid rgba(105,118,132,255);
 border-right:2px solid rgba(105,118,132,255);
 font: 75 14pt &quot;Hack Nerd Font&quot;;</string>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="placeholderText">
-            <string>Username</string>
-           </property>
-          </widget>
-          <widget class="QLineEdit" name="txt_password">
-           <property name="geometry">
-            <rect>
-             <x>190</x>
-             <y>290</y>
-             <width>331</width>
-             <height>41</height>
-            </rect>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">background-color:rgba(0,0,0,0); 
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="placeholderText">
+              <string>Username</string>
+             </property>
+            </widget>
+            <widget class="QLineEdit" name="txt_password">
+             <property name="geometry">
+              <rect>
+               <x>190</x>
+               <y>290</y>
+               <width>331</width>
+               <height>41</height>
+              </rect>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">background-color:rgba(0,0,0,0); 
 border:none;
 border-bottom:2px solid rgba(105,118,132,255);
 color:rgba(255,255,255,230);
@@ -283,25 +292,27 @@ border-left:2px solid rgba(105,118,132,255);
 border-right:2px solid rgba(105,118,132,255);
 font-size:14px;
 font: 75 14pt &quot;Hack Nerd Font&quot;;</string>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="echoMode">
-            <enum>QLineEdit::Password</enum>
-           </property>
-           <property name="placeholderText">
-            <string>Password</string>
-           </property>
-          </widget>
-          <zorder>label</zorder>
-          <zorder>btn_login</zorder>
-          <zorder>btn_adduser</zorder>
-          <zorder>bt_salir</zorder>
-          <zorder>txt_username</zorder>
-          <zorder>txt_password</zorder>
-          <zorder>label_3</zorder>
-         </widget>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="echoMode">
+              <enum>QLineEdit::Password</enum>
+             </property>
+             <property name="placeholderText">
+              <string>Password</string>
+             </property>
+            </widget>
+            <zorder>label</zorder>
+            <zorder>btn_login</zorder>
+            <zorder>btn_adduser</zorder>
+            <zorder>bt_salir</zorder>
+            <zorder>txt_username</zorder>
+            <zorder>txt_password</zorder>
+            <zorder>label_3</zorder>
+           </widget>
+          </item>
+         </layout>
         </widget>
        </item>
       </layout>
