--- a/interfaces/citas(nuevo).ui
+++ b/interfaces/citas(nuevo).ui
@@ -416,6 +416,19 @@ QPushButton:hover{
                      </layout>
                     </item>
                     <item>
+                     <spacer name="horizontalSpacer_7">
+                      <property name="orientation">
+                       <enum>Qt::Horizontal</enum>
+                      </property>
+                      <property name="sizeHint" stdset="0">
+                       <size>
+                        <width>40</width>
+                        <height>20</height>
+                       </size>
+                      </property>
+                     </spacer>
+                    </item>
+                    <item>
                      <layout class="QVBoxLayout" name="verticalLayout_8">
                       <item>
                        <layout class="QVBoxLayout" name="verticalLayout_5">
@@ -518,6 +531,19 @@ QPushButton:hover{
                    </layout>
                   </item>
                  </layout>
+                </item>
+                <item>
+                 <spacer name="horizontalSpacer_8">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
                 </item>
                 <item>
                  <layout class="QVBoxLayout" name="verticalLayout_4">
