--- a/interfaces/History.ui
+++ b/interfaces/History.ui
@@ -61,6 +61,17 @@ background-color:gray;
        </property>
        <item>
         <widget class="QTabWidget" name="tabWidget">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+           <weight>75</weight>
+           <italic>false</italic>
+           <bold>true</bold>
+           <underline>true</underline>
+           <strikeout>false</strikeout>
+           <stylestrategy>PreferDefault</stylestrategy>
+          </font>
+         </property>
          <property name="tabPosition">
           <enum>QTabWidget::North</enum>
          </property>
@@ -72,8 +83,8 @@ background-color:gray;
          </property>
          <property name="iconSize">
           <size>
-           <width>16</width>
-           <height>16</height>
+           <width>20</width>
+           <height>20</height>
           </size>
          </property>
          <property name="elideMode">
@@ -89,9 +100,16 @@ background-color:gray;
           <bool>false</bool>
          </property>
          <property name="movable">
-          <bool>true</bool>
+          <bool>false</bool>
+         </property>
+         <property name="tabBarAutoHide">
+          <bool>false</bool>
          </property>
          <widget class="QWidget" name="tab_pacientes">
+          <attribute name="icon">
+           <iconset>
+            <normaloff>ELEMENTOS GRAFICOS/registro-dental.png</normaloff>ELEMENTOS GRAFICOS/registro-dental.png</iconset>
+          </attribute>
           <attribute name="title">
            <string>Registro de pacientes</string>
           </attribute>
@@ -164,10 +182,13 @@ border-radius:20px;
               <item>
                <layout class="QVBoxLayout" name="verticalLayout_4">
                 <property name="spacing">
-                 <number>0</number>
+                 <number>4</number>
                 </property>
                 <item>
                  <layout class="QHBoxLayout" name="horizontalLayout">
+                  <property name="spacing">
+                   <number>12</number>
+                  </property>
                   <item>
                    <widget class="QLabel" name="title">
                     <property name="text">
@@ -202,8 +223,8 @@ border-radius:20px;
                    <widget class="QPushButton" name="btn_buscar">
                     <property name="minimumSize">
                      <size>
-                      <width>180</width>
-                      <height>50</height>
+                      <width>100</width>
+                      <height>40</height>
                      </size>
                     </property>
                     <property name="maximumSize">
@@ -220,7 +241,7 @@ border-radius:20px;
                     </property>
                     <property name="icon">
                      <iconset>
-                      <normaloff>../../../../.designer/backup/ELEMENTOS GRAFICOS/buscar.png</normaloff>../../../../.designer/backup/ELEMENTOS GRAFICOS/buscar.png</iconset>
+                      <normaloff>ELEMENTOS GRAFICOS/buscar.png</normaloff>ELEMENTOS GRAFICOS/buscar.png</iconset>
                     </property>
                     <property name="iconSize">
                      <size>
@@ -701,8 +722,23 @@ border-top:2px solid rgb(0,0,0);
                            <height>50</height>
                           </size>
                          </property>
+                         <property name="font">
+                          <font>
+                           <pointsize>10</pointsize>
+                          </font>
+                         </property>
                          <property name="text">
                           <string>Agregar</string>
+                         </property>
+                         <property name="icon">
+                          <iconset>
+                           <normaloff>ELEMENTOS GRAFICOS/save.png</normaloff>ELEMENTOS GRAFICOS/save.png</iconset>
+                         </property>
+                         <property name="iconSize">
+                          <size>
+                           <width>25</width>
+                           <height>25</height>
+                          </size>
                          </property>
                         </widget>
                        </item>
@@ -733,8 +769,23 @@ border-top:2px solid rgb(0,0,0);
                            <height>50</height>
                           </size>
                          </property>
+                         <property name="font">
+                          <font>
+                           <pointsize>10</pointsize>
+                          </font>
+                         </property>
                          <property name="text">
                           <string>Editar</string>
+                         </property>
+                         <property name="icon">
+                          <iconset>
+                           <normaloff>ELEMENTOS GRAFICOS/editar-codigo.png</normaloff>ELEMENTOS GRAFICOS/editar-codigo.png</iconset>
+                         </property>
+                         <property name="iconSize">
+                          <size>
+                           <width>25</width>
+                           <height>25</height>
+                          </size>
                          </property>
                         </widget>
                        </item>
@@ -765,8 +816,23 @@ border-top:2px solid rgb(0,0,0);
                            <height>50</height>
                           </size>
                          </property>
+                         <property name="font">
+                          <font>
+                           <pointsize>10</pointsize>
+                          </font>
+                         </property>
                          <property name="text">
                           <string>Limpiar</string>
+                         </property>
+                         <property name="icon">
+                          <iconset>
+                           <normaloff>ELEMENTOS GRAFICOS/limpiar.png</normaloff>ELEMENTOS GRAFICOS/limpiar.png</iconset>
+                         </property>
+                         <property name="iconSize">
+                          <size>
+                           <width>25</width>
+                           <height>25</height>
+                          </size>
                          </property>
                         </widget>
                        </item>
@@ -958,8 +1024,26 @@ border: 2px solid rgb(0,0,0);
                           <height>50</height>
                          </size>
                         </property>
+                        <property name="font">
+                         <font>
+                          <pointsize>10</pointsize>
+                          <weight>50</weight>
+                          <bold>false</bold>
+                          <underline>false</underline>
+                         </font>
+                        </property>
                         <property name="text">
                          <string>Eliminar</string>
+                        </property>
+                        <property name="icon">
+                         <iconset>
+                          <normaloff>ELEMENTOS GRAFICOS/varita-magica.png</normaloff>ELEMENTOS GRAFICOS/varita-magica.png</iconset>
+                        </property>
+                        <property name="iconSize">
+                         <size>
+                          <width>25</width>
+                          <height>25</height>
+                         </size>
                         </property>
                        </widget>
                       </item>
@@ -990,6 +1074,10 @@ border: 2px solid rgb(0,0,0);
           </layout>
          </widget>
          <widget class="QWidget" name="tab_antecendetes">
+          <attribute name="icon">
+           <iconset>
+            <normaloff>ELEMENTOS GRAFICOS/seguro.png</normaloff>ELEMENTOS GRAFICOS/seguro.png</iconset>
+          </attribute>
           <attribute name="title">
            <string>Estado de salud del paciente</string>
           </attribute>
@@ -1726,6 +1814,10 @@ border:0px;
           </layout>
          </widget>
          <widget class="QWidget" name="tab_diagnostico">
+          <attribute name="icon">
+           <iconset>
+            <normaloff>ELEMENTOS GRAFICOS/dental.png</normaloff>ELEMENTOS GRAFICOS/dental.png</iconset>
+          </attribute>
           <attribute name="title">
            <string>Diagnostico</string>
           </attribute>
@@ -2212,6 +2304,10 @@ border:0px;
           </layout>
          </widget>
          <widget class="QWidget" name="tab_trata">
+          <attribute name="icon">
+           <iconset>
+            <normaloff>ELEMENTOS GRAFICOS/reconstruccion.png</normaloff>ELEMENTOS GRAFICOS/reconstruccion.png</iconset>
+          </attribute>
           <attribute name="title">
            <string>tratamiento</string>
           </attribute>
@@ -3226,6 +3322,10 @@ border:0px;
           </layout>
          </widget>
          <widget class="QWidget" name="tab_historia">
+          <attribute name="icon">
+           <iconset>
+            <normaloff>ELEMENTOS GRAFICOS/historial-medico.png</normaloff>ELEMENTOS GRAFICOS/historial-medico.png</iconset>
+          </attribute>
           <attribute name="title">
            <string>Historia medica</string>
           </attribute>
